# AirNode

./: .gitignore  CMakeLists.txt  MODULE.bazel  README.md  TODO.md  WORKSPACE  WORKSPACE.bak  build_defs.bzl  remote_execution.bzl
cuda/: build_defs.bzl
frontend/: airnode.js  index.html  package.json
include/: BUILD  HandTracker.h  IMouseController.h  MouseFactory.h  WebSocketServer.h  mediapipe_c.h
rocm/: BUILD  build_defs.bzl
src/: BUILD  HandTracker.cpp  MacMouse.cpp  WebSocketServer.cpp  main.cpp
